[workspace]
resolver = "2"
members = ["mpi_test_macros", "mpi_test"]

[workspace.package]
authors = ["Philipp Bucher"]
categories = ["development-tools::testing"]
edition = "2024"
keywords = ["mpi", "testing", "hpc", "parallel"]
license = "MIT"
repository = "https://github.com/philbucher/mpi_test"
version = "0.1.0"
