[package]
name = "mpi_test"
description = "A Rust testing framework for MPI applications"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
mpi_test_macros = { version = "0.1.0", path = "../mpi_test_macros" }

[dev-dependencies]
mpi = "0.8"
rstest = "0.26.1"
